# OmniCore

./: .env.example  .gitignore  CHANGELOG.md  README.md  START.txt  architecture.md  pyproject.toml  tool_inventory_tables.md
config/: __init__.py  logging.py  settings.py
core/: __init__.py  guardian.py  planner.py  policy.py  recovery.py  router.py
db/: schema.sql
db/migrations/: README.sql
interfaces/: __init__.py  cli.py  rest_api.py  telegram_bot.py
memory/: __init__.py  long_term.py  short_term.py  state.py
models/: __init__.py  capabilities.py  messages.py  tasks.py  tools.py
scheduler/: __init__.py  jobs.py  pulse.py
scripts/: __init__.py  ast_async_audit.py  run.py  setup_db.py
tests/: __init__.py  conftest.py  test_advanced_os_toolkit.py  test_computer_use_toolkit.py  test_dev_todo_tracker.py  test_guardian.py  test_memory.py  test_os_list_dir.py  test_path_resolution.py  test_planner.py  test_policy_engine.py  test_router.py  test_router_federation.py  test_router_prompt.py  test_router_semantic_routing.py  test_scheduler.py  test_terminal_toolkit.py  test_tool_discovery.py  test_tools.py  test_v18_features.py  test_v33_features.py  test_v35_cognitive_calibration.py
tools/: __init__.py  admin_toolkit.py  advanced_os_toolkit.py  advanced_web_toolkit.py  api_toolkit.py  archive_image_toolkit.py  audio_record_toolkit.py  audio_toolkit.py  base.py  browser_cache_toolkit.py  communication_toolkit.py  computer_use_toolkit.py  data_manipulation_toolkit.py  deep_web_osint_toolkit.py  developer_extra_toolkit.py  developer_toolkit.py  devops_engineering_toolkit.py  document_toolkit.py  gui_automation_toolkit.py  insight_toolkit.py  mcp_toolkit.py  media_studio_toolkit.py  media_toolkit.py  monitoring_toolkit.py  network_infrastructure_toolkit.py  network_toolkit.py  ocr_toolkit.py  omega_directive_toolkit.py  os_adapters.py  os_toolkit.py  registry.py  resilience_toolkit.py  scheduler_toolkit.py  security_toolkit.py  singularity_toolkit.py  steganography_toolkit.py  system_kernel_toolkit.py  system_optimizer_toolkit.py  terminal_toolkit.py  vision_toolkit.py  (+4 more)
