[project]
name = "omnicore"
version = "0.1.0"
description = "Autonomous OS-level AI assistant with web automation, file management, and Telegram gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LLM Orchestration
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",
    # Memory
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
    # Web Automation
    "playwright>=1.48.0",
    # Gateway
    "python-telegram-bot[job-queue]>=21.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Config & Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    # Async HTTP (for API toolkit)
    "httpx>=0.27.0",
]

[project.scripts]
omnicore = "scripts.run:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
